fix overflox on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -70,6 +70,7 @@ section a
   text-decoration: underline
 
 header
+  overflow: hidden
   height: 100vh
   color: white
   width: 100%
